// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index execute fetch response to match snapshot 1`] = `
Object {
  "remoteAddress": undefined,
  "x-forwarded-for": "98.6.106.250",
}
`;

exports[`index execute w/ "remoteAddress" 1`] = `
Array [
  Array [
    "https://freegeoip.net/json/8.8.8.8",
  ],
]
`;

exports[`index execute w/ "remoteAddress" w/ multiple addresses 1`] = `
Array [
  Array [
    "https://freegeoip.net/json/10.0.0.10",
  ],
]
`;

exports[`index execute w/ "x-forwarded-for" 1`] = `
Array [
  Array [
    "https://freegeoip.net/json/98.6.106.250",
  ],
]
`;

exports[`index execute w/ "x-forwarded-for" w/ multiple addresses 1`] = `
Array [
  Array [
    "https://freegeoip.net/json/127.0.0.1",
  ],
]
`;
